2008-04-30  Tim Brown <timb@nth-dimension.org.uk>

	* libopenvas/comm.h, libopenvas/plugutils.c, libopenvas/store_internal.h,
	libopenvas/plugutils.h, libopenvas/plugutils_internal.h,
	libopenvas/store.c: Preliminary support for script_oid function.
	* packaging/debian/control, packaging/debian/copyright: Minor updates to
	control and copyright file to fix issues highlighted by jfs in regard to
	the priority and copyright of the packaging respectively.
	* packaging/debian/control: Minor update to control to fix differing
	dependency between openvas-libraries and openvas-libnasl as
	highlighted by jfs.

2008-04-18  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* packaging/fedora: New. Directory for Fedora RPM files.

	* fedora/openvas-libraries-1.0.1-1.fc8.openvas.spec,
	fedora/openvas-libraries-1.0.1-hg-Makefile.diff
	fedora/openvas-libraries-1.0.1-Makefile.diff: New.

	* MANIFEST.

2008-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* packaging/opensuse: New. Directory for OpenSUSE RPM files.

	* packaging/opensuse/openvas-libraries-1.0.1-1.suse102.openvas.spec,
	packaging/opensuse/openvas-libraries-1.0.1-Makefile.diff,
	packaging/opensuse/openvas-libraries-1.0.1-hg-Makefile.diff: New.

2008-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/network.c (open_socket): Fixed makro name for SSL debugging
	and thus reactived code execute for debug-ssl mode.

2008-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* Makefile, libopenvas_hg/Makefile: Add missing DESTDIR for install
	targets.

2008-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* INSTALL_README: Remove note about bison as it is not needed anymore.

2008-04-16  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/*: Minor fixes, now lintian clean.

2008-04-02  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/changelog: Updated for new upstream release

2008-04-01  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
